# P1---B2-9b-2017

devel/: .catkin  .rosinstall  setup.sh
devel/lib/brain/: center
devel/lib/brain2/: center2
devel/lib/image/: image_reader  old_read  read
devel/lib/order/: move
devel/lib/para/: medic
devel/lib/pkgconfig/: brain.pc  brain2.pc  image.pc  order.pc  para.pc
devel/share/brain/cmake/: brainConfig.cmake
devel/share/brain2/cmake/: brain2Config.cmake
devel/share/image/cmake/: imageConfig.cmake
devel/share/order/cmake/: orderConfig.cmake
devel/share/para/cmake/: paraConfig.cmake
src/brain/: CMakeLists.txt
src/brain/src/: center.cpp  programmin_center.cpp
src/image/: .clang_complete  CMakeLists.txt
src/image/src/: depth_read.cpp  frames.gv  image_reader.cpp  rgb_read.cpp
